--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "build":"npm i"
   },
   "engines": {
-    "node": ">=NODE_JS_VERSION"
-},
+    "node": ">=14.20.1"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
